--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,14 +11,25 @@ body {
   min-width: 320px;
   position: relative;
   overflow-x: hidden;
-  line-height: $line-height;
-  font-size: $font-size;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   font-weight: 500;
   color: var(--text-color);
 }
+
+h1 {
+  font-size: 2.25rem !important;
+}
+
+//@layer base {
+//  p {
+//    @apply text-4xl;
+//  }
+//  h1 {
+//    @apply text-5xl;
+//  }
+//}
 
 a {
   text-decoration: none;
