Add NavBar (app bar)

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -6,6 +6,8 @@
   --background-color: #D3D6DB;
   --text-color: #35458D;
   --card-color: #F8FAF9;
+  --nav-title-color: #35458D;
+  --nav-btn-hover: #B1B3B7;
 }
 
 //Dark mode colors
@@ -14,6 +16,8 @@
   --background-color: #35458D;
   --text-color: #F8FAF9;
   --card-color: #242C56;
+  --nav-title-color: #0BD99B;
+  --nav-btn-hover: #5565aD;
 }
 
 $accentPurple: #B834DF;
