--- a/src/assets/scss/_navBar.scss
+++ b/src/assets/scss/_navBar.scss
@@ -3,13 +3,10 @@
 @import "colors";
 
 nav {
-  #nav-title {
-    color: var(--nav-title-color);
-  }
   #eye {
     color: $accentBlue;
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
   }
   #arrow-back {
     color: var(--text-color);
@@ -36,7 +33,7 @@ nav {
   #gear:hover {
     background-color: var(--nav-btn-hover);
   }
-  .nav-section {
-    width: 800px;
-  }
+  //.nav-section {
+  //  max-width: 800px;
+  //}
 }
