Feature. About page

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -7,6 +7,7 @@
   --text-color: #35458D;
   --card-color: #F8FAF9;
   --nav-title-color: #35458D;
+  --link-color: #B834DF;
   --nav-btn-hover: #B1B3B7;
 }
 
@@ -17,6 +18,7 @@
   --text-color: #F8FAF9;
   --card-color: #242C56;
   --nav-title-color: #0BD99B;
+  --link-color: #0BD99B;
   --nav-btn-hover: #5565aD;
 }
 
