--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,5 +1,5 @@
 //Fonts for app
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600");
 
 $montserrat-alternate: 'Montserrat Alternates', sans-serif;
