--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,7 +6,7 @@
 @import "home-page";
 
 body {
-  font-family: $montserrat-alternate;
+  font-family: $montserrat-alternate !important;
   font-weight: 400;
   color: var(--text-color);
   background-color: var(--background-color);
@@ -15,19 +15,31 @@ body {
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  font-weight: 500;
+h3, h4, h5, h6 {
+  font-weight: 600 !important;
   color: var(--text-color);
 }
 
 h1 {
+  font-weight: 600 !important;
   color: var(--nav-title-color);
   font-size: 1.3rem !important;
 }
 
 h2 {
+  font-weight: 600 !important;
   color: var(--text-color);
   font-size: 1.5rem !important;
+}
+
+p {
+  font-weight: 400 !important;
+  font-size: 20px;
+  color: var(--text-color);
+}
+
+span {
+  color: var(--text-color);
 }
 
 //@layer base {
@@ -40,6 +52,8 @@ h2 {
 //}
 
 a {
+  color: var(--link-color) !important;
+  font-weight: bold;
   text-decoration: none;
   :visited {
     text-decoration: none !important;
@@ -49,6 +63,46 @@ a {
   }
 }
 
+.link {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  border-bottom: solid 1px var(--link-color);
+  //padding: 2px 0;
+}
+
+.link-wrapper {
+  position: relative;
+  display: block;
+  padding: 20px 0;
+}
+
+.hover-a {
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 3px;
+    transform: scaleX(0);
+    background-color: var(--link-color);
+
+    transition: transform 0.3s;
+  }
+
+  &:hover {
+    &:after {
+      transform: scaleX(1);
+    }
+  }
+}
+
 input, textarea {
   outline: none;
+}
+
+.about-title {
+  color: $accentPurple;
 }
