--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,6 +4,8 @@
 @import "colors";
 @import "navBar";
 @import "home-page";
+@import "settings";
+@import "modal";
 
 body {
   font-family: $montserrat-alternate !important;
