Feature. Selecting skin modal

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -8,7 +8,7 @@
   color: $accentBlue;
 }
 
-.locale-icon {
+.locale-icon, .skin-icon, .sound-icon, .vibration-icon {
   fill: var(--text-color);
 }
 
