Add feature one out of two exercise with result

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -10,6 +10,7 @@
   --link-color: #B834DF;
   --nav-btn-hover: #B1B3B7;
   --modal-color: #35458D;
+  --accent-color: #0BD99B;
 }
 
 //Dark mode colors
@@ -22,6 +23,7 @@
   --link-color: #0BD99B;
   --nav-btn-hover: #5565aD;
   --modal-color: #35458D;
+  --accent-color: #B834DF;
 }
 
 $accentPurple: #B834DF;
